<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/PageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/membership"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/NameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/RadioGenderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/RadioGenderLady"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lady"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/RadioGenderGentleman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gentleman"
            android:textSize="24sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/SubscriptionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="ToggleButton"
            android:textOff="@string/normal"
            android:textOn="@string/premium"
            android:textSize="24sp" />/>

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/sign_up"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/DisplayMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textSize="24sp" />

</LinearLayout>